test/integration/good/tuples/tuple-ix-assign3.stan
transformed data {
  array[10] (int, int) x;
  x[1].1 = 5;
}
